--- a/home.css
+++ b/home.css
@@ -3,25 +3,27 @@ body {
 }
 
 #header .welcome {
-    background-image: linear-gradient(0deg, rgba(0, 89, 255, 0.178), rgba(0, 195, 255, 0.191)),  url(./images/head-img.jpg);
+    background-image: url(./images/head-img.jpg);
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     height: 200px;
     width: 100%;
     z-index: 2;
     display: flex;
     flex-direction: column;
-    vertical-align: bottom;
+    flex-wrap: wrap;
 }
 
 .welcome h1 {
-    padding: 20px 60px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
     color: rgb(228, 228, 214);
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 40px;
     font-weight: bold;
+    margin-left: 50px;
 }
 
 .welcome marquee {
@@ -36,6 +38,7 @@ body {
 #side .media-icon {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: flex-end;
     color: white;
     list-style-type: none;
@@ -58,6 +61,7 @@ body {
 #banner .service {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     justify-content: center;
     color: blanchedalmond;
@@ -72,6 +76,7 @@ body {
 #boxes {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 150px;
     margin-left: 30px;
@@ -80,7 +85,7 @@ body {
 }  
 
 #boxes .box-1 {
-    background-image: linear-gradient(0deg, rgba(0, 89, 255, 0.178), rgba(0, 195, 255, 0.191)), url(./images/box-1.jpg);
+    background-image: url(./images/box-1.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     justify-content: start;
@@ -88,11 +93,14 @@ body {
     box-sizing: border-box;
     border-radius: 3px;
     height: 560px;
+    flex: 30%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
 #boxes .box-2 {
-    background-image: linear-gradient(0deg, rgba(0, 89, 255, 0.178), rgba(0, 195, 255, 0.191)), url(./images/box-2.jpg);
+    background-image: url(./images/box-2.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     justify-content: center;
@@ -100,11 +108,14 @@ body {
     height: 560px;
     box-sizing: border-box;
     border-radius: 3px;
+    flex: 30%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
 #boxes .box-3 {
-    background-image: linear-gradient(0deg, rgba(0, 89, 255, 0.178), rgba(0, 195, 255, 0.191)), url(./images/box-3.jpg);
+    background-image: url(./images/box-3.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -113,11 +124,15 @@ body {
     width: 30%;
     box-sizing: border-box;
     border-radius: 3px;
+    flex: 30%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #boxes h2 {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     color:  rgb(0, 255, 213);
     font-family: Arial, Helvetica, sans-serif;
@@ -128,6 +143,7 @@ body {
 #boxes p {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     color: cornsilk;
     font-family: Arial, Helvetica, sans-serif;
@@ -142,6 +158,7 @@ body {
 #clients .speech {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     justify-content: center;
     color: blanchedalmond;
@@ -206,6 +223,7 @@ body {
 #background-video .txt {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     color: wheat;
     padding: 20px;
@@ -221,6 +239,7 @@ body {
 #footer .names {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 120px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -278,6 +297,7 @@ body {
 #footer-bottom .inventor {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     color: whitesmoke;
     margin-top: 60px;
@@ -289,4 +309,11 @@ body {
 #footer-bottom .inventor a {
     text-decoration: none;
     color:rgb(0, 255, 213);
+}
+
+/* responsiveness */
+@media (max-width: 800px) {
+    .box-1, .box-2, .box-3 {
+        flex: 100%;
+    }
 }
