--- a/land.css
+++ b/land.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(0deg, rgba(255, 0, 149, 0.178), rgba(255, 0, 149, 0.191)), url("./images/land-img.jpg");
+    background-image: url("./images/land-img.jpg");
     background-size: cover;
 }
 
@@ -41,6 +41,7 @@ nav ul {
 #aside .social-icon {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: flex-end;
     color: white;
     list-style-type: none;
@@ -57,12 +58,9 @@ nav ul {
 #content {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    transform: translate(-50%, -50%);
+    justify-content: center;
 }
 
 .text h1 {
@@ -75,7 +73,7 @@ nav ul {
 .button-wrapper .button {
     background-color: rgb(0, 255, 213);
     color: white;
-    padding: 15px 32px;
+    padding: 15px 30px;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -91,13 +89,13 @@ nav ul {
     color: white;
 }
 
-#footer .bottom {
-    position: relative;
-    margin-top: 320px;
+#footer {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    vertical-align: bottom;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 100px;
+    align-self: flex-end;
     color: rgb(194, 204, 204);
     font-size: 10px;
     font-weight: bold;
