--- a/home.css
+++ b/home.css
@@ -74,28 +74,28 @@ body {
 }
 
 #boxes {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    box-sizing: border-box;
     margin-top: 150px;
-    margin-left: 30px;
-    margin-right: 30px;
     height: 600px;
-}  
+    margin-left: 60px;
+} 
+
+#boxes:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 #boxes .box-1 {
     background-image: url(./images/box-1.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    justify-content: start;
     width: 30%;
     box-sizing: border-box;
     border-radius: 3px;
     height: 560px;
-    flex: 30%;
-    display: flex;
-    flex-wrap: wrap;
+    float: left;
+    margin: 10px;
 }
 
 
@@ -103,14 +103,12 @@ body {
     background-image: url(./images/box-2.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    justify-content: center;
     width:  30%;
     height: 560px;
     box-sizing: border-box;
     border-radius: 3px;
-    flex: 30%;
-    display: flex;
-    flex-wrap: wrap;
+    float: left;
+    margin: 10px;
 }
 
 
@@ -119,14 +117,12 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    justify-content: end;
     height: 560px;
     width: 30%;
     box-sizing: border-box;
     border-radius: 3px;
-    flex: 30%;
-    display: flex;
-    flex-wrap: wrap;
+    float: left;
+    margin: 10px;
 }
 
 #boxes h2 {
@@ -171,44 +167,72 @@ body {
 }
 
 #testimonies {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     margin-top: 70px;
-    margin-left: 30px;
+    margin-left: 60px;
     margin-right: 30px;
     height: 600px;
-}  
+}
+
+#testimonies:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#testimonies .talk-1 {
+    width: 30%;
+    margin: 10px;
+    float: left;
+    margin: 10px;
+}
+
+#testimonies .talk-2 {
+    width: 30%;
+    margin: 10px;
+    float: left;
+    margin: 10px;
+}
+
+#testimonies .talk-3 {
+    width: 30%;
+    margin: 10px;
+    float: left;
+    margin: 10px;
+}
+
 
 #testimonies h2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     color:  rgb(0, 255, 213);
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 85px;
     padding: 40px;
-}
-
-#testimonies p {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+#testimonies p {
     color: cornsilk;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 5px;
     padding: 80px;
     height: 30px;
     margin-left: 20px;
-}
-
-#testimonies h3 {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+#testimonies h3 {
     color:  rgb(0, 255, 213);
     font-family: fantasy;
     font-weight: lighter;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 /* Style the video: 100% width and height to cover the entire window */
@@ -229,41 +253,56 @@ body {
     padding: 20px;
     position: relative;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 97%;
     height: 170px;
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#footer .names {
+#footer {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-around;
     margin-top: 120px;
+    margin-left: 80px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#footer:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 
 #footer .name-1 {
     color:  rgb(0, 255, 213);
     padding-top: 10px;
+    float: left;
+    margin: 10px;
 }
 
 #footer .name-2 {
     border-top: 1px solid wheat; 
     color: whitesmoke;
+    float: left;
+    margin: 10px;
 }
 
 #footer .name-3 {
     border-top: 1px solid wheat; 
     color: whitesmoke;
+    float: left;
+    margin: 10px;
 }
 
 #footer .name-4 {
     border-top: 1px solid wheat; 
     color: whitesmoke;
+    float: left;
+    margin: 10px;
 }
 
 #footer .name-2 h3 {
@@ -312,8 +351,90 @@ body {
 }
 
 /* responsiveness */
-@media (max-width: 800px) {
-    .box-1, .box-2, .box-3 {
-        flex: 100%;
+@media screen and (max-width: 800px) {
+    body {
+        overflow-x: hidden;
     }
+
+    #boxes .box-1 {
+        width: 100%;
+    }
+
+    #boxes .box-2 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #boxes .box-3 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #boxes {
+        margin-left: 40px;
+        width: 80%;
+    }
+
+    #clients .speech {
+        margin-top: 1380px;
+    }
+
+    #testimonies .talk-1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    #testimonies .talk-2 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #testimonies .talk-3 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #testimonies {
+        margin-left: 40px;
+        width: 80%;
+    }
+    
+    #background-video .txt {
+      font-size: 13px;
+    } 
+    
+    #background-video iframe {
+        margin-top: 95px;
+    }
+
+    #footer .name-1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    #footer .name-2 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #footer .name-3 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #footer .name-4 {
+        width: 100%;
+        margin-top: 55px;
+    }
+
+    #footer {
+        margin-left: 40px;
+        width: 80%;
+    }
+
+    #footer-bottom .inventor {
+        width: 80%;
+        margin-left: 50px;
+    }
+
 }
