--- a/home.css
+++ b/home.css
@@ -351,7 +351,7 @@ body {
 }
 
 /* responsiveness */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 480px) {
     body {
         overflow-x: hidden;
     }
@@ -371,36 +371,64 @@ body {
     }
 
     #boxes {
-        margin-left: 40px;
+        margin-left: 30px;
         width: 80%;
+        align-content: center;
+    }
+
+    #boxes h2 {
+        margin-top: 2px;
+    }
+
+    #boxes .box-2 h2 {
+        margin-top: 20px;
     }
 
     #clients .speech {
         margin-top: 1380px;
+        font-size: 20px;
     }
 
     #testimonies .talk-1 {
         width: 100%;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-content: space-between;
     }
 
     #testimonies .talk-2 {
         width: 100%;
         margin-top: 55px;
+        display: flex;
+        flex-direction: column;
+        align-content: space-between;
     }
 
     #testimonies .talk-3 {
         width: 100%;
         margin-top: 55px;
+        display: flex;
+        flex-direction: column;
+        align-content: space-between;
+    }
+
+    #testimonies .talk-3 h2 {
+        text-align: center;
     }
 
     #testimonies {
-        margin-left: 40px;
+        margin-left: 30px;
         width: 80%;
+    }
+
+    #testimonies p {
+        padding-top: 20px;
     }
     
     #background-video .txt {
-      font-size: 13px;
+      font-size: 11px;
+      width: 90%;
     } 
     
     #background-video iframe {
